force-app/main/default/objects/Opportunity/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>