force-app/main/default/objects/Opportunity/recordTypes/Loca_a_Temporada.recordType-meta.xml
<RecordType>
    <fullName>Loca_a_Temporada</fullName>
    <active>true</active>
    <businessProcess>Processo de locação</businessProcess>
    <description>Registro de Locação para temporada</description>
    <label>Locaçaõ Temporada</label>
</RecordType>