force-app/main/default/objects/Opportunity/recordTypes/Loca_o_Regular.recordType-meta.xml
<RecordType>
    <fullName>Loca_o_Regular</fullName>
    <active>true</active>
    <businessProcess>Processo de locação</businessProcess>
    <description>Registro de locação regular</description>
    <label>Locação Regular</label>
</RecordType>