force-app/main/default/objects/Opportunity/recordTypes/Utility.recordType-meta.xml
<RecordType>
    <fullName>Utility</fullName>
    <active>true</active>
    <businessProcess>Utility Opportunities</businessProcess>
    <description>For use with opportunities for Utility customers</description>
    <label>Utility</label>
</RecordType>